legend-pure-rust/crates/parser/tests/snapshots/test_primitives__boolean.snap
---
source: crates/parser/tests/test_primitives.rs
expression: file
---
SourceFile {
    sections: [
        Section {
            kind: "Pure",
            imports: [],
            elements: [
                Function(
                    FunctionDef {
                        package: Some(
                            Package {
                                name: "my",
                                parent: None,
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 10,
                                    end_line: 2,
                                    end_column: 11,
                                },
                            },
                        ),
                        name: SpannedString {
                            value: "test",
                            source_info: SourceInfo {
                                source: "test.pure",
                                start_line: 2,
                                start_column: 14,
                                end_line: 2,
                                end_column: 17,
                            },
                        },
                        type_parameters: [],
                        multiplicity_parameters: [],
                        parameters: [],
                        return_type: Type(
                            TypeReference {
                                package: None,
                                name: "Any",
                                type_arguments: [],
                                multiplicity_arguments: [],
                                type_variable_values: [],
                                source_info: SourceInfo {
                                    source: "test.pure",
                                    start_line: 2,
                                    start_column: 22,
                                    end_line: 2,
                                    end_column: 24,
                                },
                            },
                        ),
                        return_multiplicity: ZeroOrMany,
                        body: [
                            Literal(
                                Boolean(
                                    BooleanLiteral {
                                        value: true,
                                        source_info: SourceInfo {
                                            source: "test.pure",
                                            start_line: 4,
                                            start_column: 5,
                                            end_line: 4,
                                            end_column: 8,
                                        },
                                    },
                                ),
                            ),
                            Collection(
                                CollectionExpr {
                                    elements: [
                                        Literal(
                                            Boolean(
                                                BooleanLiteral {
                                                    value: true,
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 5,
                                                        start_column: 6,
                                                        end_line: 5,
                                                        end_column: 9,
                                                    },
                                                },
                                            ),
                                        ),
                                        Literal(
                                            Boolean(
                                                BooleanLiteral {
                                                    value: false,
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 5,
                                                        start_column: 12,
                                                        end_line: 5,
                                                        end_column: 16,
                                                    },
                                                },
                                            ),
                                        ),
                                        Literal(
                                            Boolean(
                                                BooleanLiteral {
                                                    value: true,
                                                    source_info: SourceInfo {
                                                        source: "test.pure",
                                                        start_line: 5,
                                                        start_column: 19,
                                                        end_line: 5,
                                                        end_column: 22,
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                    multiplicity: None,
                                    source_info: SourceInfo {
                                        source: "test.pure",
                                        start_line: 5,
                                        start_column: 5,
                                        end_line: 5,
                                        end_column: 5,
                                    },
                                },
                            ),
                        ],
                        stereotypes: [],
                        tagged_values: [],
                        tests: [],
                        source_info: SourceInfo {
                            source: "test.pure",
                            start_line: 2,
                            start_column: 1,
                            end_line: 6,
                            end_column: 1,
                        },
                    },
                ),
            ],
            source_info: SourceInfo {
                source: "test.pure",
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 7,
            },
        },
    ],
    source_info: SourceInfo {
        source: "test.pure",
        start_line: 1,
        start_column: 1,
        end_line: 1,
        end_column: 7,
    },
}
